// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Head renders 1`] = `
<head>
  <meta
    charSet="UTF-8"
  />
  <title>
    some title preface
     FastPass results
  </title>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "<<CSS:../reports/automated-checks-report.css>>",
      }
    }
  />
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "some style sheet",
      }
    }
  />
</head>
`;

exports[`ReporterHead renders 1`] = `
<Head
  bundledStyles={
    Object {
      "styleSheet": "<<CSS:../../packages/report/bundle/report.css>>",
    }
  }
  titlePreface="Accessibility Insights"
/>
`;

exports[`WebReportHead renders 1`] = `
<Head
  bundledStyles={
    Object {
      "styleSheet": "<<CSS:detailsView.css>>",
    }
  }
  titlePreface="Accessibility Insights for Web"
/>
`;
